<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="170dp"
            android:maxHeight="170dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/avatar_desc"
            android:src="@drawable/avatar_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center" />
        //отступы
        // привязка
        //bold
        <TextView
            android:id="@+id/user_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/user_description"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            android:maxHeight="80dp"
            android:ellipsize="end"
            android:maxLines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_name" />

        <androidx.cardview.widget.CardView
            android:id="@+id/personCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/lightCream"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintTop_toTopOf="@+id/user_description">
            //layner добавть пустые вьюшки с фикс размером
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:columnCount="3">

                <TextView
                    android:id="@+id/specialty_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/specialty"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"
                    android:layout_marginEnd="16dp" />


                <TextView
                    android:id="@+id/age_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textColor="@color/text_color"
                    android:layout_marginEnd="16dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/height_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/specialty_p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/specialty_p"
                    android:textColor="@color/text_color"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp" />

                <TextView
                    android:id="@+id/age_p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_p"
                    android:textColor="@color/text_color"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:id="@+id/height_p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height_p"
                    android:textColor="@color/text_color"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp" />
            </GridLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/personCard"
            tools:layout_editor_absoluteX="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    android:id="@+id/posts_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_amount"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/posts_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/posts_title"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/divider_color" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    android:id="@+id/followers_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follow_amount"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/followers_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follow_title"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/divider_color" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    android:id="@+id/likes_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers_amount"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/likes_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers_title"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/title_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_about"
            android:textColor="@color/black"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/user_about_from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:text="@string/user_about_from"
            android:textColor="@color/dark_grey"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_about" />

        <TextView
            android:id="@+id/user_about_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:gravity="start"
            android:text="@string/user_about_product"
            android:textColor="@color/dark_grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_about_from" />

        <TextView
            android:id="@+id/user_about_childhood"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:gravity="start"
            android:text="@string/user_about_childhood"
            android:textColor="@color/dark_grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_about_product" />

        <TextView
            android:id="@+id/title_interests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_interests"
            android:textColor="@color/black"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/user_about_childhood" />

        <GridLayout
            android:id="@+id/interest_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/title_interests">

            <Button
                android:id="@+id/button_interest1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="96dp"
                android:maxHeight="48dp"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/primary"
                android:text="@string/interest1"
                android:textColor="@color/white"
                android:layout_margin="4dp" />

            <Button
                android:id="@+id/button_interest2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="96dp"
                android:maxHeight="48dp"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/primary"
                android:text="@string/interest2"
                android:textColor="@color/white"
                android:layout_margin="4dp" />

            <Button
                android:id="@+id/button_interest3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="96dp"
                android:maxHeight="48dp"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/primary"
                android:text="@string/interest3"
                android:textColor="@color/white"
                android:layout_margin="4dp" />

        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
